--- a/index.html
+++ b/index.html
@@ -10,13 +10,40 @@
     <link
         href="https://fonts.googleapis.com/css2?family=Red+Hat+Display:ital,wght@0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,300;1,400;1,600;1,700;1,800;1,900&display=swap"
         rel="stylesheet">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.2/css/all.css"
+        integrity="sha384-oS3vJWv+0UjzBfQzYUhtDYW+Pj2yciDJxpsK1OYPAYjqT085Qq/1cq5FLXAZQ7Ay" crossorigin="anonymous">
     <link rel="stylesheet" href="./styles.css">
     <title>Order Summary Component</title>
     <link rel="icon" href="./assets/favicon-32x32.png" type="image/x-icon">
 </head>
 
 <body>
-
+    <!--CARD-->
+    <div class="card-container">
+        <article class="card">
+            <figure>
+                <img src="./assets/illustration-hero.svg" alt="someone listen to music">
+            </figure>
+            <h1>Order Summary</h1>
+            <p>You can now listen to millions of songs, audiobooks, and podcasts on any device anywhere you like!</p>
+            <div class="card__tag">
+                <img src="./assets/icon-music.svg" alt="music icon">
+                <div class="card__tag--plan">
+                    <h3>Annual Plan</h3>
+                    <p>$59.99/year</p>
+                </div>
+                <a href="">Change</a>
+            </div>
+            <button type="submit"><a href="#">Proceed to Payment</a></button>
+            <button type="submit"><a href="#">Cancel Order</a></button>
+        </article>
+    </div>
 </body>
+<!--FOOTER-->
+<footer>
+    <p>© Design by Frontend Mentor</p>
+    <p>Coded by <a id="profile-link" href="https://github.com/cuauh-cabrera" target="_blank"><i
+                class="fab fa-github"></i> Cuau Cabrera</a></p>
+</footer>
 
 </html>
